fixed images not displaying (?)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="style.css"></link>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 	</head>
-	<body id="body" onmousemove="getMousePos(event);" onmousedown="mouseIsPressed = true;" onmouseup="mouseIsPressed = false;" onkeydown="keys[event.which] = true;" onkeyup="keys[event.which] = false;">
+	<body id="body">
 		<div id="content">
 			<div id="info">
 				<h1>
@@ -24,8 +24,8 @@
 				<br>
 			</div>
 			<div id="images">
-				<img src="level17.png" style="position: relative; top: 0%; left: 2.5%; width: 45%;"></img>
-				<img src="level10.png" style="position: relative; top: 0%; left: 5%; width: 45%;"></img>
+				<img src="https://github.com/HappyRyan2/hypocube-translocation/blob/gh-pages/level10.PNG" style="position: relative; top: 0%; left: 2.5%; width: 45%;"></img>
+				<img src="https://github.com/HappyRyan2/hypocube-translocation/blob/gh-pages/level17.PNG" style="position: relative; top: 0%; left: 5%; width: 45%;"></img>
 			</div>
 			<div id="download">
 				<br>
