fixed images not displaying (?)

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				<br>
 			</div>
 			<div id="images">
-				<img src="https://github.com/HappyRyan2/hypocube-translocation/blob/gh-pages/level10.PNG" style="position: relative; top: 0%; left: 2.5%; width: 45%;"></img>
-				<img src="https://github.com/HappyRyan2/hypocube-translocation/blob/gh-pages/level17.PNG" style="position: relative; top: 0%; left: 5%; width: 45%;"></img>
+				<img src="level10.PNG" style="position: relative; top: 0%; left: 2.5%; width: 45%;"></img>
+				<img src="level17.PNG" style="position: relative; top: 0%; left: 5%; width: 45%;"></img>
 			</div>
 			<div id="download">
 				<br>
